# Template

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml  codecov.yml
src/: CMakeLists.txt  asan_test.cpp  msan_test.cpp  test_lib.cpp  tsan_test.cpp
test/: CMakeLists.txt  test_hellocov.cpp
